--- a/MNIST_example.ipynb
+++ b/MNIST_example.ipynb
@@ -12,7 +12,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -29,7 +30,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "jkGW1u4po7i_",
-        "outputId": "8009e337-00f0-47ef-d98a-dee51534f098",
+        "outputId": "74d1f7a7-8e7f-47f8-92cd-a07574959dc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,7 +41,7 @@
         "drive.mount('/content/drive/')\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,7 +56,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "8LwkJzuIs-O0",
-        "outputId": "8a6cf4fc-b59d-4995-fa58-f94e64233656",
+        "outputId": "b33cba46-7989-4d3d-a18a-985e035eaf64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -64,17 +65,17 @@
       "source": [
         "!git clone https://github.com/morgansaras27/EEE511-Final-Project.git"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'EEE511-Final-Project'...\n",
-            "remote: Enumerating objects: 24, done.\u001b[K\n",
-            "remote: Counting objects: 100% (24/24), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
-            "remote: Total 24 (delta 6), reused 20 (delta 5), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (24/24), done.\n"
+            "remote: Enumerating objects: 37, done.\u001b[K\n",
+            "remote: Counting objects: 100% (37/37), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
+            "remote: Total 37 (delta 11), reused 27 (delta 7), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (37/37), done.\n"
           ],
           "name": "stdout"
         }
@@ -84,7 +85,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "flRAXLoRx6jg",
-        "outputId": "643089c9-8ff5-4742-ff7f-7b8b864b7235",
+        "outputId": "fcb88aa3-adee-4b16-f19d-315d4af6bdca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -93,7 +94,7 @@
       "source": [
         "!git clone https://github.com/wxs/keras-mnist-tutorial.git"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,10 +112,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vZ7uj3hdqJbj",
-        "outputId": "db8a072a-1c1b-471c-d548-01b638ec5e7c",
+        "outputId": "eb7ccac8-fb58-4bab-d3ea-b5d786bda72f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 717
+          "height": 1000
         }
       },
       "source": [
@@ -122,51 +123,88 @@
         "\n",
         "!python3 \"/content/drive/My Drive/Colab Notebooks/mnist_cnn.py\"\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2020-09-28 12:26:20.201366: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudart.so.10.1\n",
+            "2020-09-30 12:18:04.422787: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudart.so.10.1\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
             "11493376/11490434 [==============================] - 0s 0us/step\n",
             "x_train shape: (60000, 28, 28, 1)\n",
             "60000 train samples\n",
             "10000 test samples\n",
-            "2020-09-28 12:26:22.691941: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcuda.so.1\n",
-            "2020-09-28 12:26:22.752829: E tensorflow/stream_executor/cuda/cuda_driver.cc:314] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-            "2020-09-28 12:26:22.752915: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (c15035d2dbfc): /proc/driver/nvidia/version does not exist\n",
-            "2020-09-28 12:26:22.753373: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN)to use the following CPU instructions in performance-critical operations:  AVX512F\n",
-            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2020-09-28 12:26:22.769799: I tensorflow/core/platform/profile_utils/cpu_utils.cc:104] CPU Frequency: 2000134999 Hz\n",
-            "2020-09-28 12:26:22.770101: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x1866840 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-            "2020-09-28 12:26:22.770152: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+            "2020-09-30 12:18:06.515005: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcuda.so.1\n",
+            "2020-09-30 12:18:06.576485: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:06.577150: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1716] Found device 0 with properties: \n",
+            "pciBusID: 0000:00:04.0 name: Tesla T4 computeCapability: 7.5\n",
+            "coreClock: 1.59GHz coreCount: 40 deviceMemorySize: 14.73GiB deviceMemoryBandwidth: 298.08GiB/s\n",
+            "2020-09-30 12:18:06.577195: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudart.so.10.1\n",
+            "2020-09-30 12:18:06.789517: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcublas.so.10\n",
+            "2020-09-30 12:18:06.921571: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcufft.so.10\n",
+            "2020-09-30 12:18:06.942212: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcurand.so.10\n",
+            "2020-09-30 12:18:07.207824: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcusolver.so.10\n",
+            "2020-09-30 12:18:07.225377: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcusparse.so.10\n",
+            "2020-09-30 12:18:07.735700: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudnn.so.7\n",
+            "2020-09-30 12:18:07.735905: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:07.736620: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:07.737152: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1858] Adding visible gpu devices: 0\n",
+            "2020-09-30 12:18:07.749233: I tensorflow/core/platform/profile_utils/cpu_utils.cc:104] CPU Frequency: 2200000000 Hz\n",
+            "2020-09-30 12:18:07.749614: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x1488bc0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+            "2020-09-30 12:18:07.749647: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+            "2020-09-30 12:18:07.900110: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:07.900806: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x1488a00 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+            "2020-09-30 12:18:07.900835: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Tesla T4, Compute Capability 7.5\n",
+            "2020-09-30 12:18:07.901880: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:07.902413: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1716] Found device 0 with properties: \n",
+            "pciBusID: 0000:00:04.0 name: Tesla T4 computeCapability: 7.5\n",
+            "coreClock: 1.59GHz coreCount: 40 deviceMemorySize: 14.73GiB deviceMemoryBandwidth: 298.08GiB/s\n",
+            "2020-09-30 12:18:07.902469: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudart.so.10.1\n",
+            "2020-09-30 12:18:07.902514: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcublas.so.10\n",
+            "2020-09-30 12:18:07.902553: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcufft.so.10\n",
+            "2020-09-30 12:18:07.902578: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcurand.so.10\n",
+            "2020-09-30 12:18:07.902616: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcusolver.so.10\n",
+            "2020-09-30 12:18:07.902637: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcusparse.so.10\n",
+            "2020-09-30 12:18:07.902658: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudnn.so.7\n",
+            "2020-09-30 12:18:07.902733: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:07.903342: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:07.903859: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1858] Adding visible gpu devices: 0\n",
+            "2020-09-30 12:18:07.906122: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudart.so.10.1\n",
+            "2020-09-30 12:18:11.731076: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1257] Device interconnect StreamExecutor with strength 1 edge matrix:\n",
+            "2020-09-30 12:18:11.731131: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1263]      0 \n",
+            "2020-09-30 12:18:11.731143: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1276] 0:   N \n",
+            "2020-09-30 12:18:11.736279: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:11.736987: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:982] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2020-09-30 12:18:11.737509: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+            "2020-09-30 12:18:11.737560: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1402] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 13962 MB memory) -> physical GPU (device: 0, name: Tesla T4, pci bus id: 0000:00:04.0, compute capability: 7.5)\n",
             "Epoch 1/12\n",
-            "469/469 [==============================] - 127s 271ms/step - loss: 2.2820 - accuracy: 0.1351 - val_loss: 2.2383 - val_accuracy: 0.3349\n",
+            "2020-09-30 12:18:12.541094: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcublas.so.10\n",
+            "2020-09-30 12:18:14.011269: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudnn.so.7\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 2.2774 - accuracy: 0.1629 - val_loss: 2.2408 - val_accuracy: 0.3096\n",
             "Epoch 2/12\n",
-            "469/469 [==============================] - 128s 272ms/step - loss: 2.2117 - accuracy: 0.2775 - val_loss: 2.1512 - val_accuracy: 0.6085\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 2.2184 - accuracy: 0.2751 - val_loss: 2.1663 - val_accuracy: 0.5688\n",
             "Epoch 3/12\n",
-            "469/469 [==============================] - 127s 272ms/step - loss: 2.1220 - accuracy: 0.4023 - val_loss: 2.0362 - val_accuracy: 0.6633\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 2.1396 - accuracy: 0.3909 - val_loss: 2.0637 - val_accuracy: 0.6808\n",
             "Epoch 4/12\n",
-            "469/469 [==============================] - 128s 273ms/step - loss: 2.0014 - accuracy: 0.4810 - val_loss: 1.8833 - val_accuracy: 0.6995\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 2.0320 - accuracy: 0.4801 - val_loss: 1.9248 - val_accuracy: 0.7226\n",
             "Epoch 5/12\n",
-            "469/469 [==============================] - 127s 272ms/step - loss: 1.8469 - accuracy: 0.5383 - val_loss: 1.6905 - val_accuracy: 0.7348\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 1.8926 - accuracy: 0.5351 - val_loss: 1.7465 - val_accuracy: 0.7584\n",
             "Epoch 6/12\n",
-            "469/469 [==============================] - 128s 272ms/step - loss: 1.6650 - accuracy: 0.5803 - val_loss: 1.4722 - val_accuracy: 0.7640\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 1.7200 - accuracy: 0.5828 - val_loss: 1.5358 - val_accuracy: 0.7797\n",
             "Epoch 7/12\n",
-            "469/469 [==============================] - 128s 273ms/step - loss: 1.4852 - accuracy: 0.6134 - val_loss: 1.2588 - val_accuracy: 0.7858\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 1.5378 - accuracy: 0.6145 - val_loss: 1.3184 - val_accuracy: 0.7956\n",
             "Epoch 8/12\n",
-            "469/469 [==============================] - 128s 272ms/step - loss: 1.3207 - accuracy: 0.6448 - val_loss: 1.0747 - val_accuracy: 0.8041\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 1.3650 - accuracy: 0.6425 - val_loss: 1.1246 - val_accuracy: 0.8098\n",
             "Epoch 9/12\n",
-            "469/469 [==============================] - 128s 273ms/step - loss: 1.1844 - accuracy: 0.6682 - val_loss: 0.9293 - val_accuracy: 0.8178\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 1.2220 - accuracy: 0.6651 - val_loss: 0.9697 - val_accuracy: 0.8215\n",
             "Epoch 10/12\n",
-            "469/469 [==============================] - 128s 272ms/step - loss: 1.0760 - accuracy: 0.6903 - val_loss: 0.8181 - val_accuracy: 0.8298\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 1.1061 - accuracy: 0.6879 - val_loss: 0.8516 - val_accuracy: 0.8323\n",
             "Epoch 11/12\n",
-            "469/469 [==============================] - 128s 272ms/step - loss: 0.9925 - accuracy: 0.7087 - val_loss: 0.7352 - val_accuracy: 0.8367\n",
+            "469/469 [==============================] - 4s 8ms/step - loss: 1.0151 - accuracy: 0.7044 - val_loss: 0.7622 - val_accuracy: 0.8379\n",
             "Epoch 12/12\n",
-            "469/469 [==============================] - 127s 272ms/step - loss: 0.9207 - accuracy: 0.7268 - val_loss: 0.6692 - val_accuracy: 0.8460\n",
-            "Test loss: 0.6691884398460388\n",
-            "Test accuracy: 0.8460000157356262\n"
+            "469/469 [==============================] - 4s 8ms/step - loss: 0.9462 - accuracy: 0.7196 - val_loss: 0.6940 - val_accuracy: 0.8445\n",
+            "Test loss: 0.6939763426780701\n",
+            "Test accuracy: 0.8445000052452087\n"
           ],
           "name": "stdout"
         }
